--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=springboot-user-authentication
 spring.datasource.url=jdbc:mysql://localhost:3306/SpringBootAuthentication
 spring.datasource.username=root
-spring.datasource.password=Uday@090622
+spring.datasource.password=--------
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
